--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,14 @@
-# Sets default memory used for gradle commands. Can be overridden by user or command line properties.
-# This is required to provide enough memory for the Minecraft decompilation process.
 org.gradle.jvmargs=-Xmx3G
-org.gradle.daemon=false
+
+minecraft_version=1.19.2
+
+archives_base_name=jamesconfig
+mod_version=1.0-SNAPSHOT
+maven_group=net.vakror
+
+architectury_version=3.9.66
+
+fabric_loader_version=0.14.23
+fabric_api_version=0.44.0+1.18
+
+forge_version=1.19.2-43.3.2
