--- a/common/src/main/resources/jamesconfig-common.mixins.json
+++ b/common/src/main/resources/jamesconfig-common.mixins.json
@@ -1,9 +1,10 @@
 {
   "required": true,
   "minVersion": "0.8",
-  "package": "net.vakror.jamesconfig.mixin.forge",
+  "package": "net.vakror.jamesconfig.mixin",
   "compatibilityLevel": "JAVA_17",
   "mixins": [
+    "JsonPrimitiveAccessor"
   ],
   "client": [
   ],
