--- a/build.gradle
+++ b/build.gradle
@@ -1,11 +1,20 @@
 plugins {
     id "architectury-plugin" version "3.4-SNAPSHOT"
     id "dev.architectury.loom" version "1.1-SNAPSHOT" apply false
+
+    // Plugin to create merged jars
+    id "io.github.pacifistmc.forgix" version "1.2.6"
 }
 
 architectury {
     minecraft = rootProject.minecraft_version
 }
+
+forgix {
+    group = "net.vakror.jamesconfig"
+    mergedJarName = "jamesConfig-${rootProject.mod_version}-${rootProject.minecraft_version}.jar"
+}
+
 
 subprojects {
     apply plugin: "dev.architectury.loom"
@@ -31,6 +40,9 @@ allprojects {
     archivesBaseName = rootProject.archives_base_name
     version = rootProject.mod_version
     group = rootProject.maven_group
+
+    sourceCompatibility = 17
+    targetCompatibility = 17
 
     repositories {
         // Add repositories to retrieve artifacts from in here.
