--- a/forge/src/main/resources/META-INF/mods.toml
+++ b/forge/src/main/resources/META-INF/mods.toml
@@ -9,9 +9,9 @@ modLoader="javafml" #mandatory
 loaderVersion="[38,)" #mandatory This is typically bumped every Minecraft version by Forge. See our download page for lists of versions.
 # The license for you mod. This is mandatory metadata and allows for easier comprehension of your redistributive properties.
 # Review your options at https://choosealicense.com/. All rights reserved is the default copyright stance, and is thus the default here.
-license="All Rights Reserved"
+license="MIT"
 # A URL to refer people to when problems occur with this mod
-issueTrackerURL="https://github.com/Truly-Modular/untitled1/issues"
+issueTrackerURL="https://github.com/vaylor27/config/issues"
 # A list of mods - how many allowed here is determined by the individual mod loader
 [[mods]] #mandatory
 # The modid of the mod
@@ -27,14 +27,14 @@ displayName="James Config" #mandatory
 # A URL for the "homepage" for this mod, displayed in the mod UI
 #displayURL="http://example.com/" #optional
 # A file name (in the root of the mod JAR) containing a logo for display
-logoFile="icon.png" #optional
+logoFile="config.png" #optional
 # A text field displayed in the mod UI
-#credits="Thanks for this example mod goes to Java" #optional
+credits="Vakror Alor (ItsMeNotJames) — Programming\nSmartin — porting to multiloader" #optional
 # A text field displayed in the mod UI
-#authors="Love, Cheese and small house plants" #optional
+authors="Vakror Alor (ItsMeNotJames), Smartin" #optional
 # The description text for the mod (multi line!) (#mandatory)
 description='''
-
+A simple, lightweight, and (almost) dependency-free config mod for both fabric and forge!
 '''
 # A dependency - use the . to indicate dependency for a specific modid. Dependencies are optional.
 [[dependencies.jamesconfig]] #optional
