--- a/forge/src/main/resources/META-INF/mods.toml
+++ b/forge/src/main/resources/META-INF/mods.toml
@@ -6,7 +6,7 @@
 # The name of the mod loader type to load - for regular FML @Mod mods it should be javafml
 modLoader="javafml" #mandatory
 # A version range to match for said mod loader - for regular FML @Mod it will be the forge version
-loaderVersion="[38,)" #mandatory This is typically bumped every Minecraft version by Forge. See our download page for lists of versions.
+loaderVersion="[37,)" #mandatory This is typically bumped every Minecraft version by Forge. See our download page for lists of versions.
 # The license for you mod. This is mandatory metadata and allows for easier comprehension of your redistributive properties.
 # Review your options at https://choosealicense.com/. All rights reserved is the default copyright stance, and is thus the default here.
 license="MIT"
@@ -29,7 +29,7 @@ displayName="James Config" #mandatory
 # A file name (in the root of the mod JAR) containing a logo for display
 logoFile="config.png" #optional
 # A text field displayed in the mod UI
-credits="Vakror Alor (ItsMeNotJames) — Programming\nSmartin — porting to multiloader" #optional
+credits="Vakror Alor (ItsMeNotJames) — Programming, Smartin — porting to multiloader" #optional
 # A text field displayed in the mod UI
 authors="Vakror Alor (ItsMeNotJames), Smartin" #optional
 # The description text for the mod (multi line!) (#mandatory)
@@ -43,7 +43,7 @@ A simple, lightweight, and (almost) dependency-free config mod for both fabric a
    # Does this dependency have to exist - if not, ordering below must be specified
    mandatory=true #mandatory
    # The version range of the dependency
-   versionRange="[38,)" #mandatory
+   versionRange="[37,)" #mandatory
    # An ordering relationship for the dependency - BEFORE or AFTER required if the relationship is not mandatory
    ordering="NONE"
    # Side this dependency is applied on - BOTH, CLIENT or SERVER
@@ -53,6 +53,13 @@ A simple, lightweight, and (almost) dependency-free config mod for both fabric a
    modId="minecraft"
    mandatory=true
    # This version range declares a minimum of the current minecraft version up to but not including the next major version
-   versionRange="[1.19.2,1.20)"
+   versionRange="[1.17.1,1.20.2)"
+   ordering="NONE"
+   side="BOTH"
+[[dependencies.jamesconfig]]
+   modId="architectury"
+   mandatory=true
+   # This version range declares a minimum of the current minecraft version up to but not including the next major version
+   versionRange="[2,)"
    ordering="NONE"
    side="BOTH"
