--- a/gradle.properties
+++ b/gradle.properties
@@ -3,12 +3,12 @@ org.gradle.jvmargs=-Xmx3G
 minecraft_version=1.19.2
 
 archives_base_name=jamesconfig
-mod_version=1.0-SNAPSHOT
+mod_version=1.1
 maven_group=net.vakror
 
 architectury_version=6.5.85
 
-fabric_loader_version=0.14.23
+fabric_loader_version=0.14.22
 fabric_api_version=0.76.1+1.19.2
 
 forge_version=1.19.2-43.3.2
